--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gymAPP</title>
-    <link ref="./styles.css" rel="stylesheet" type="text/css">
+    <link href="./styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    <header>
+        <h1>gymAPP</h1>
+    </header>
+    <section>
+        <form id="loginCard" action="">
+            <h1>Sign In</h1>
+            <p>
+                <label for="username">Username</label>
+                <input type="text" name="username" id="username" placeholder="Username">
+            </p>
+            <p>
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password" placeholder="Password">
+            </p>
+            <p>
+                <input type="submit" value="Log In" id="logInSubmit">
+            </p>
+        </form>
+    </section>
     <script src="./main.js"></script>
 </body>
 </html>
