Basic user session login with persisting input from local

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -9,7 +9,15 @@
 <body>
     <header>
         <section id="dashHeader">
-       
+            <H1>dashboard</H1>
+            <button id="logOutButton">LOGOUT</button>
+        </section>
+        <section id="userDashboard">
+            <h1>WELCOME <span id="usernameID"></span>!</h1>
+            <label for="userInput">I WORKED OUT FOR THIS MANY DAYS: </label>
+            <input type="number" id="userInput">
+            <input type="submit" value="SAVE" id="saveButton">
+            <h1>LAST SAVE: <span id="savedInput"></span></h1>
         </section>
     </header>
     <script src="./main.js"></script>
