--- a/public/logout.html
+++ b/public/logout.html
@@ -10,6 +10,7 @@
     <header>
         <section id="logOutBanner">
             <h1>You've successfully logged out.</h1>
+            <a href="./index.html">HOME</a>
         </section>
     </header>
     <script src="./main.js"></script>
