Implement basicn navbar for dashboard

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -9,8 +9,12 @@
 <body>
     <header>
         <section id="dashHeader">
-            <H1>dashboard</H1>
-            <button id="logOutButton">LOGOUT</button>
+            <nav>
+                <ul id="dashNav">
+                    <li><a href="" id="logOutButton">LOGOUT</a></li>
+                    <li><a href="../public/index.html">HOME</a></li>
+                </ul>
+            </nav>
         </section>
         <section id="userDashboard">
             <h1>WELCOME <span id="usernameID"></span>!</h1>
