--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -9,11 +9,9 @@
 <body>
     <header>
         <section id="dashHeader">
-            <nav>
-                <ul id="dashNav">
-                    <li><a href="" id="logOutButton">LOGOUT</a></li>
-                    <li><a href="../public/index.html">HOME</a></li>
-                </ul>
+            <nav id="dashNav">
+                <a href="" id="logOutButton">LOGOUT</a>
+                <a href="./index.html">HOME</a>
             </nav>
         </section>
         <section id="userDashboard">
@@ -23,6 +21,24 @@
             <input type="submit" value="SAVE" id="saveButton">
             <h1>LAST SAVE: <span id="savedInput"></span></h1>
         </section>
+        <seciton id="exerciseSection">
+            <h2>Last Gym Check In: <span id="lastGymVisit"></span></h2>
+            <div id="exerciseList">
+                <div id="exerciseCard">
+                    <h3 id="exerciseTitle">EXERCISE NAME</h3>
+                    <div id="exerciseLastWeight">120 LBS</div>
+                    <label for="newExerciseWeight"></label>
+                    <input type="number" id="newExerciseWeight">
+                    <button id="updateExercise">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2z"/>
+                            <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466"/>
+                          </svg>
+                    </button>
+                </div>
+            </div>
+
+        </seciton>
     </header>
     <script src="./main.js"></script>
 </body>
