allow users to save their exercise weights to DB

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -21,7 +21,7 @@
             <input type="submit" value="SAVE" id="saveButton">
             <h1>LAST SAVE: <span id="savedInput"></span></h1>
         </section>
-        <seciton id="exerciseSection">
+        <section id="exerciseSection">
             <h2>Last Gym Check In: <span id="lastGymVisit"></span></h2>
             <h2>Add exercise: <span><button id="addExerciseButton">ADD</button></span> </h2>
             <div id="exerciseList">
@@ -29,7 +29,7 @@
                 </div>
             </div>
 
-        </seciton>
+        </section>
     </header>
     <script src="./main.js"></script>
 </body>
