Fix exercise info alignment, also add test cards

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -26,6 +26,20 @@
             <h2>Add exercise: <span><button id="addExerciseButton">ADD</button></span> </h2>
             <div id="exerciseList">
                 <div id="exerciseCard">
+                    <h3 id="exerciseTitle" data-name="testExercise">testExercise</h3>
+                    <div id="exerciseLastWeight">testLastWeight<span> LBs</span></div>
+                    <input type="number" id="newExerciseWeight" placeholder="New weight">
+                    <button id="updateExercise">
+                    Update
+                    </button>
+                </div>
+                <div id="exerciseCard">
+                    <h3 id="exerciseTitle" data-name="testExercise">testExercise</h3>
+                    <div id="exerciseLastWeight">testLastWeight<span> LBs</span></div>
+                    <input type="number" id="newExerciseWeight" placeholder="New weight">
+                    <button id="updateExercise">
+                    Update
+                    </button>
                 </div>
             </div>
 
