--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -43,6 +43,6 @@
 
         </section>
     </header>
-    <script src="./main.js"></script>
+    <script src="./dash.js"></script>
 </body>
 </html>
