--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gymAPP</title>
     <link href="./styles.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
     <header>
         <section id="dashHeader">
@@ -19,7 +21,8 @@
         </section>
         <section id="exerciseSection">
             <div id="headerCard">
-                <h2 id="lastGymVisitTitle">Last Gym Check In: <span id="lastGymVisit"></span><span><button id="addVisitDateButton">ADD</button></span></h2>
+                <h2 id="lastGymVisitTitle">Last Gym Check In: <span id="lastGymVisit"></span><span><button
+                            id="addVisitDateButton">ADD</button></span></h2>
                 <h2 id="addExerciseTitle">Add exercise: <span><button id="addExerciseButton">ADD</button></span> </h2>
             </div>
             <div id="exerciseList">
@@ -27,6 +30,23 @@
 
         </section>
     </header>
+
+    <section class="addExerciseSection">
+        <div id="addExercisePopup">
+            <h2>Add New Exercise</h2>
+            <form id="addExerciseForm">
+                <label for="exerciseName">Exercise Name:</label>
+                <input type="text" id="exerciseName" required>
+
+                <label for="exerciseWeight">Initial Weight (lbs):</label>
+                <input type="number" id="exerciseWeight" required>
+
+                <button type="submit">Add Exercise</button>
+                <button type="button" id="closeExerciseForm">Cancel</button>
+            </form>
+        </div>
+    </section>
     <script src="./dash.js"></script>
 </body>
+
 </html>
