--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -23,19 +23,22 @@
         <section id="exerciseSection">
             <div id="headerCard">
                 <h2 id="lastGymVisitTitle">Last Gym Check In: <span id="lastGymVisit"></span><span><button
-                            id="addVisitDateButton">ADD</button></span></h2>
-                <h2 id="addExerciseTitle">Add exercise: <span><button id="addExerciseButton">ADD</button></span> </h2>
+                            id="addVisitDateButton">UPDATE</button></span></h2>
+            </div>
+            <div id="buttonHeader">
+                <button id="addExerciseButton"><i class="bi bi-plus-lg"></i></button>
             </div>
             <div id="exerciseList">
             </div>
-
+          
         </section>
     </header>
 
     <section class="addExerciseSection">
         <div id="addExercisePopup">
-            <h2>Add New Exercise</h2>
+            
             <form id="addExerciseForm">
+                <h2>Add New Exercise</h2>
                 <label for="exerciseName">Exercise Name:</label>
                 <input type="text" id="exerciseName" required>
 
