--- a/public/dashboardNew.html
+++ b/public/dashboardNew.html
@@ -19,7 +19,7 @@
         <header>
             <nav class="navbar navbar-expand-lg bg-white">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="./dashboard.html">
+                    <a class="navbar-brand" href="./dashboardNew.html">
                         <svg xmlns="http://www.w3.org/2000/svg" width="26"
                             height="26" fill="currentColor"
                             class="bi bi-house-fill" viewBox="0 0 16 16">
@@ -93,7 +93,7 @@
                     <i class="bi bi-plus-circle"></i></button>
             </div>
             <div class="card mx-3">
-                <ul class="list-group list-group-flush">
+                <ul id="exerciseList" class="list-group list-group-flush">
                     <li class="list-group-item">
                         <div id="exerciseCard">
                             <h3 id="exerciseTitle" data-name="test">Example
@@ -139,7 +139,7 @@
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
-        <script src="./dash.js"></script>
+        <script src="./dashNew.js"></script>
     </body>
 
 </html>
