--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1,67 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>gymAPP</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link href="./styles.css" rel="stylesheet" type="text/css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>gymAPP</title>
+        <link rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous">
+        <link href="./styles.css" rel="stylesheet" type="text/css">
+    </head>
 
-<body>
-    <header>
-        <section id="dashHeader">
-            <nav id="dashNav">
-                <a href="" id="logOutButton">LOGOUT</a>
-                <a href="./index.html">HOME</a>
+    <body>
+        <header>
+            <nav class="navbar navbar-expand-lg bg-white">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="./dashboardNew.html">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="26"
+                            height="26" fill="currentColor"
+                            class="bi bi-house-fill" viewBox="0 0 16 16">
+                            <path
+                                d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293z" />
+                            <path
+                                d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293z" />
+                        </svg>
+                    </a>
+                    <button id="navToggler" class="navbar-toggler" type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span id="navTogglerLogo">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="26"
+                                height="26" class="bi bi-list"
+                                viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
+                            </svg>
+                        </span>
+                    </button>
+                    <div
+                        class="collapse navbar-collapse flex-row-reverse flex-grow-0"
+                        id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page"
+                                    href="#">Gym</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Water</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="logOutButton"
+                                    href="#">Logout</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </nav>
-        </section>
+        </header>
         <section id="userDashboard">
-            <h1>WELCOME <span id="usernameID"></span>!</h1>
+            <h1 class="px-3 my-3">WELCOME <span id="usernameID"></span>!</h1>
         </section>
-        <section id="exerciseSection">
-            <div id="headerCard">
-                <h2 id="lastGymVisitTitle">Last Gym Check In: <span id="lastGymVisit"></span><span><button
-                            id="addVisitDateButton">UPDATE</button></span></h2>
-            </div>
-            <div id="buttonHeader">
-                <button id="addExerciseButton"><i class="bi bi-plus-lg"></i></button>
-            </div>
-            <div id="exerciseList">
-                <div id="exerciseCard">
-                    <h3 id="exerciseTitle" data-name="test">Example Exercise</h3>
-         <div id="exerciseLastWeight">100 LBS<span> LBs</span></div>
-         <input type="number" id="newExerciseWeight" placeholder="New weight" min="1">
-         <button id="updateExercise">
-            <i class="bi bi-arrow-clockwise"></i>
-         </button>
-         <button id="deleteExercise">
-            <i class="bi bi-trash-fill"></i>
-         </button>
+        <section id="headerSection">
+            <div class="row w-100 mx-0 gx-5">
+                <div class="card col-6 px-3">
+                    <div class="card-body headerCard">
+                        <h5 class="card-title">You've increased:</h5>
+                        <h6 class="card-subtitle mb-2 fs-1">70%</h6>
+                        <h5 class="card-title">of your workout weights!</h5>
+                    </div>
+                </div>
+                <div class="card col-6 px-3">
+                    <div class="card-body headerCard">
+                        <h5 class="card-title">Last gym check in:</h5>
+                        <h6 class="card-subtitle mb-2 fs-1"
+                            id="lastGymVisit">TEST</h6>
+                        <button
+                            id="addVisitDateButton">UPDATE</button>
+                    </div>
                 </div>
             </div>
-          
         </section>
-    </header>
 
-    <section class="addExerciseSection">
-        <div id="addExercisePopup">
-            
-            <form id="addExerciseForm">
-                <h2>Add New Exercise</h2>
-                <label for="exerciseName">Exercise Name:</label>
-                <input type="text" id="exerciseName" required>
+        <section id="exerciseSection mx-auto">
+            <div id="buttonHeader">
+                <button id="addExerciseButton">
+                    <i class="bi bi-plus-circle"></i></button>
+            </div>
+            <div class="card mx-3">
+                <ul id="exerciseList" class="list-group list-group-flush">
+                </ul>
+            </div>
+            <div id="exerciseList">
 
-                <label for="exerciseWeight">Initial Weight (lbs):</label>
-                <input type="number" id="exerciseWeight" required>
+            </div>
+        </section>
 
-                <button type="submit">Add Exercise</button>
-                <button type="button" id="closeExerciseForm">Cancel</button>
-            </form>
-        </div>
-    </section>
-    <script src="./dash.js"></script>
-</body>
+        <section class="addExerciseSection">
+            <div id="addExercisePopup">
+
+                <form id="addExerciseForm">
+                    <h2>Add New Exercise</h2>
+                    <label for="exerciseName">Exercise Name:</label>
+                    <input type="text" id="exerciseName" required>
+
+                    <label for="exerciseWeight">Initial Weight (lbs):</label>
+                    <input type="number" id="exerciseWeight" required>
+
+                    <button type="submit">Add Exercise</button>
+                    <button type="button" id="closeExerciseForm">Cancel</button>
+                </form>
+            </div>
+        </section>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+        <script src="./dash.js"></script>
+    </body>
 
 </html>
