--- a/public/invalidLogin.html
+++ b/public/invalidLogin.html
@@ -6,10 +6,9 @@
    <title>Log In Success</title>
    <link href="./styles.css" rel="stylesheet" type="text/css">
 </head>
-<body>
-   <h1>Login Unsuccessful</h1>
+<body style="text-align:center;">
+   <h1 >Login Unsuccessful</h1>
    <p>
-      Try Again? 
       <a href="./index.html">HOME</a>
    </p>
 </body>
