--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -19,7 +19,7 @@
         <header>
             <nav class="navbar navbar-expand-lg bg-white">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="./dashboardNew.html">
+                    <a class="navbar-brand" href="./dashboard.html">
                         <svg xmlns="http://www.w3.org/2000/svg" width="26"
                             height="26" fill="currentColor"
                             class="bi bi-house-fill" viewBox="0 0 16 16">
