initial PWA manifest commit

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gymAPP</title>
     <link href="./styles.css" rel="stylesheet" type="text/css">
+    <link rel="manifest" href="manifest.json" />
 </head>
 <body>
     <header>
