--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -13,6 +13,7 @@
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
             crossorigin="anonymous">
         <link href="./styles.css" rel="stylesheet" type="text/css">
+        <link rel="manifest" href="manifest.json" />
     </head>
 
     <body>
