Add regisration feature

--- a/public/register.html
+++ b/public/register.html
@@ -12,8 +12,8 @@
         <h1>gymAPP</h1>
     </header>
     <section>
-        <form id="logInCard">
-            <h1>Sign In</h1>
+        <form id="registerCard">
+            <h1>Register an Account</h1>
             <p>
                 <label for="username">Username</label>
                 <input type="text" name="username" id="username" placeholder="Username">
@@ -22,14 +22,12 @@
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password" placeholder="Password">
             </p>
+            <a href="./index.html">HOME</a>
             <p>
-                <a id="registerLink" href="">Register</a>
-            </p>
-            <p>
-                <input type="submit" value="Log In" id="logInSubmit">
+                <input type="submit" value="Register" id="registerSubmit">
             </p>
         </form>
     </section>
-    <script src="./main.js"></script>
+    <script src="./register.js"></script>
 </body>
 </html>
